# floatpaste

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.claude/: settings.json  settings.local.json
.github/: pull_request_template.md
docs/: super-patch-fix-2026-03-22.md  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: background.json  editor.json  manager.json  picker.json  search.json  settings.json  tooltip.json  workbench.json
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: app_bootstrap.rs  launch_mode.rs  lib.rs  main.rs
src-tauri/src/commands/: clips.rs  mod.rs  settings.rs  windows.rs
src-tauri/src/domain/: clip_item.rs  editor_session.rs  error.rs  events.rs  mod.rs  search_session.rs  settings.rs  workbench_session.rs
src-tauri/src/platform/windows/: active_app.rs  clipboard_monitor.rs  file_clipboard.rs  image_clipboard.rs  mod.rs  paste_executor.rs  picker_key_capture.rs  picker_mouse_monitor.rs  picker_position.rs  shortcuts.rs  single_instance.rs  startup.rs  tray.rs  window_utils.rs
src-tauri/src/repository/: sqlite_repository.rs
src-tauri/src/services/: dedup_service.rs  history_service.rs  image_storage.rs  mod.rs  normalize_service.rs  paste_executor.rs  picker_position_service.rs  privacy_service.rs  search_service.rs  settings_service.rs  shortcut_manager.rs  startup_service.rs  tooltip_window.rs  tray_service.rs  window_coordinator.rs
src-tauri/tests/: test_win_f_shortcut.rs
(+116 files in other folders)
